- :after_open and :after_buffer_switch hooks added.
- Sample script for git branch status variable added.
- comment_out and uncomment functions added.
- comment_string and comment_close_string settings added.
- Numerous small fixes, adjustments and refactorings.
- Added -m (--open-matching) command line argument.
- wrap_paragraph function and wrap_margin setting added for hard wrapping text.

0.8.5

- Added 256 colour support.
- Added support for opening files with "filepath:linenumber" syntax.
- Added ability to put %_ in a code closer as the place to position the cursor.
- Code closers can now contain newlines.
- Now closer text is parsed-indented by default.
- Added copy_selection_to_klipper.
- Added cut_selection_to_klipper.
- Added paste_from_klipper.
- Added delete_and_store_line_to_klipper.
- Added delete_to_EOL_to_klipper.
- Added delete_line_to_klipper.
- Added support for regexp match placeholders (\1, \2, etc.) in findAndReplace.
- Added $k shell command variable for klipper contents.
- Added eol_behaviour setting.
- Various minor bug fixes.
- Changed to MIT licence.

0.8.4

- Added joinLines function.
- Added "yes and (s)top" as a find-and-replace option.
- Added '-h' to be synonymous with '--help'.
- Added "Ctrl-Q to quit" to opening message.
- Added close_code feature.
- Added list selection.
- Added buffer selection.
- Added delete_newline_on_delete_to_eol option.
- Added select_block command.
- Slight (8%) display performance improvement.
- Moved source code from svn to github.com.

0.8.3

- Extended ASCII characters (128 to 254) are now typeable.
- Added elsif as a Ruby unindenter.
- Significant internal refactoring.
- First working rubygem.
- Added HAML syntax highlighting.
- Configuration can now be downloaded from the Internet if missing.
- Updated README and changed setup.rb installation method.

0.8.2

- Added ability to use ';' in keychains.
- Added the printKeychain command.