@@ -661,6 +661,7 @@ lang.ruby.indent.unindenters ^\s*(end|else|elsif|ensure|when|rescue)\b|(^\s+[\]}
 lang.ruby.indent.preventers (\".+?[^\\]\")|('.+?[^\\]')|(`.+?[^\\]`)|(\/.+?[^\\]\/)|(^\s*#.*)|\S\s+if
 lang.ruby.indent.ignore ^\s*$
 lang.ruby.context.ignore ^=(begin|end)$
+lang.ruby.column_delimiters =>?|:|,
 
 # PHP
 
